# URL-shortener

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  yoyo.ini
app/configuration/: __init__.py  server.py
app/internal/pkg/middlewares/: handle_http_exceptions.py
app/internal/pkg/models/: routes.py
app/internal/repository/: __init__.py
app/internal/repository/postgresql/: __init__.py  shortener.py
app/internal/routes/: __init__.py  shortener.py
app/internal/services/: __init__.py  shortener.py
app/pkg/connectors/: __init__.py
app/pkg/models/: shortener.py
app/pkg/models/base/: exception.py
app/pkg/models/exceptions/: shortener.py
app/pkg/models/types/: __init__.py  strings.py
app/pkg/settings/: settings.py
docker/migrations/: Dockerfile
migrations/: 20230606_01_CZiYl-create-table-urls.py  20230606_02_9nF5i-create-table-counters.py
scripts/: migrate.py
