[tool.poetry]
name = "url-shortener-2"
version = "0.1.0"
description = ""
authors = ["“Newoks” <“newoks21@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.9.0"}
dependency-injector = "^4.40.0"
aiopg = "^1.3.3"
yoyo-migrations = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

